--- a/blog/css/main.scss
+++ b/blog/css/main.scss
@@ -6,7 +6,8 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+//$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -14,9 +15,10 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       white;//#111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
+$brand-color-light: lighten($brand-color, 50%);
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
