Added demos back with updated links.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,8 @@
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
         {% endfor %}
+
+        <a class="page-link" href="{{ 'demos' | prepend: site.baseurl }}">A.I. Demos</a>
       </div>
     </nav>
 
