--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       white;//#111;
+$text-color:       #e3e6ef;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 $brand-color-light: lighten($brand-color, 50%);
