--- a/css/override.css
+++ b/css/override.css
@@ -2,13 +2,14 @@ html {
     height: 100%;
     background: url('../../images/acrylicorner_dot_com_wallpaper.jpg');
     background-repeat: repeat;
+    background-size: cover;
 }
 
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure {
-    color: white;
-}
+/*h1, h2, h3, h4, h5, h6,*/
+/*p, blockquote, pre,*/
+/*ul, ol, dl, figure {*/
+    /*color: #e3e6ef;*/
+/*}*/
 
 pre,
 code {
