Fixed the link for AI Demos.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
           {% endif %}
         {% endfor %}
 
-        <a class="page-link" href="{{ 'demos' | prepend: site.baseurl }}">A.I. Demos</a>
+        <a class="page-link" href="http://acrylicorner.com/demos/">A.I. Demos</a>
       </div>
     </nav>
 
