--- a/css/override.css
+++ b/css/override.css
@@ -1,6 +1,7 @@
 html {
     height: 100%;
-    background: url('../../images/acrylicorner_dot_com_wallpaper.jpg');
+    /*background: url('../../images/acrylicorner_dot_com_wallpaper.jpg');*/
+    background-color: #110c12;
     background-repeat: repeat;
     background-size: cover;
 }
