Added new post and link.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,7 @@
         {% endfor %}
 
         <a class="page-link" href="http://acrylicorner.com/demos/">A.I. Demos</a>
+        <a class="page-link" href="http://acrylicorner.com/presentations/swarmIntelligence.html">Swarm Intelligence Pres.</a>
       </div>
     </nav>
 
