--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar ">
   <h2>A.I. Demos</h2>
   <ul>
-    <li><a class="page-link" href="{{site.baseurl}}demos/">A.I. Demos</a></li>
+    <li><a class="page-link" href="{{site.url}}/demos/">A.I. Demos</a></li>
   </ul>
 </div>
 
