Added PMD TTRPG link.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,8 @@
 <div class="sidebar ">
-  <h2>A.I. Demos</h2>
+  <h2>Projects/Neat Stuff</h2>
   <ul>
     <li><a class="page-link" href="{{site.url}}/demos/">A.I. Demos</a></li>
+      <li><a class="page-link" href="{{site.url}}/pmdTTRPG/">PMD TTRPG</a></li>
   </ul>
 </div>
 
