--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,6 +4,7 @@
         <li><a class="page-link" href="{{site.url}}/demos/">A.I. Demos</a></li>
         <li><a class="page-link" href="{{site.url}}/apps/pmdTTRPG/">PMD TTRPG</a></li>
         <li><a class="page-link" href="{{site.url}}/apps/cucumberNameGen/">Cucumber Name Gen</a></li>
+        <li><a class="page-link" href="{{site.url}}/apps/txt2regiletter/">Text to Regional Letter Emoji</a></li>
     </ul>
 </div>
 
