--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,9 @@
     <h2>Projects and Misc. Apps</h2>
     <ul>
         <li><a class="page-link" href="{{site.url}}/demos/">A.I. Demos</a></li>
+        <li><a class="page-link" href="{{site.url}}/demos/Math/Project 1">Math Project 1</a></li>
+        <li><a class="page-link" href="{{site.url}}/demos/Math/Project 2">Math Project 2</a></li>
+        <li><a class="page-link" href="{{site.url}}/demos/Math/Project 3">Math Project 3</a></li>
         <li><a class="page-link" href="{{site.url}}/apps/txt2regiletter/">Text to Regional Letter Emoji</a></li>
     </ul>
 </div>
