Updates from last year, added resume, added math project 4.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
   <link href="{{site.baseurl | prepend:site.url}}/css/bootstrap.min.css" rel="stylesheet">
   <link href="{{site.baseurl | prepend:site.url}}/css/theme.css" rel="stylesheet">
   <link href="{{site.baseurl | prepend:site.url}}/css/syntax.css" rel="stylesheet">
+  <link href="{{site.baseurl | prepend:site.url}}/css/site.css" rel="stylesheet">
   <link href="{{site.baseurl | prepend:site.url}}/css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
@@ -54,6 +55,7 @@
           <!-- <li><a href="{{site.baseurl | prepend:site.url}}/tags.html">/tags</a></li> -->
           <li><a href="{{site.baseurl | prepend:site.url}}/about.html">/about</a></li>
           <li><a href="{{site.baseurl | prepend:site.url}}/presentations.html">/presentations</a></li>
+          <li><a href="{{site.baseurl | prepend:site.url}}/resume.html">/resume</a></li>
         </ul>
       </div>
     </div>
